z-index fix

--- a/music-app/src/styles/App.css
+++ b/music-app/src/styles/App.css
@@ -234,7 +234,7 @@
   justify-content: space-between;
   padding: 0 40px;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   left: 250px;
   right: 0;
   background-color: rgba(20, 20, 20, 0.75);
@@ -451,6 +451,7 @@
   background: linear-gradient(180deg, #fb4c6c 0%, #181818 90%);
   width: 100%;
   padding: 15px;
+  margin-top: -100px;
   margin-bottom: -500px;
   z-index: 0;
 }
@@ -461,7 +462,7 @@
   align-items: end;
   gap: 30px;
   padding: 40px;
-  margin-top: 50px;
+  margin-top: 150px;
 }
 
 .playlist-cover-wrap {
